# grlx-rpc

./: LICENSE  README.md  meson.build  meson_options.txt
include/grlx/rpc/: async_logger.hpp  async_manager.hpp  buffer_pool.hpp  buffer_type.hpp  client.hpp  dispatcher.hpp  encoder.hpp  message.hpp  security.hpp  server.hpp  session.hpp  ssl_channel.hpp  string_hash.hpp  tcp_channel.hpp
test/: meson.build  test_dispatcher.cpp  test_rpc.cpp  test_security.cpp  test_server.cpp  test_session.cpp  test_ssl.cpp
test/fixtures/: rpc_fixture.hpp  test_certs.hpp
